--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="title">
+        <h1 >Quiz App</h1>
+    </header>
 </body>
 </html>
