add multiple cards

--- a/index.html
+++ b/index.html
@@ -23,6 +23,61 @@
                 </ul>
             </nav>
         </section>
+        <section class="card">
+            <h3>This is a text with a question</h3>
+            <button>Show Answer</button>
+            <nav>
+                <ul>
+                    <li>#html</li>
+                    <li>#flexbox</li>
+                    <li>#css</li>
+                </ul>
+            </nav>
+        </section>
+        <section class="card">
+            <h3>This is a text with a question</h3>
+            <button>Show Answer</button>
+            <nav>
+                <ul>
+                    <li>#html</li>
+                    <li>#flexbox</li>
+                    <li>#css</li>
+                </ul>
+            </nav>
+        </section>
+        <section class="card">
+            <h3>This is a text with a question</h3>
+            <button>Show Answer</button>
+            <nav>
+                <ul>
+                    <li>#html</li>
+                    <li>#flexbox</li>
+                    <li>#css</li>
+                </ul>
+            </nav>
+        </section>
+        <section class="card">
+            <h3>This is a text with a question</h3>
+            <button>Show Answer</button>
+            <nav>
+                <ul>
+                    <li>#html</li>
+                    <li>#flexbox</li>
+                    <li>#css</li>
+                </ul>
+            </nav>
+        </section>
+        <section class="card">
+            <h3>This is a text with a question</h3>
+            <button>Show Answer</button>
+            <nav>
+                <ul>
+                    <li>#html</li>
+                    <li>#flexbox</li>
+                    <li>#css</li>
+                </ul>
+            </nav>
+        </section>
     </main>
 </body>
 </html>
