--- a/index.html
+++ b/index.html
@@ -67,17 +67,13 @@
                 </ul>
             </nav>
         </section>
-        <section class="card">
-            <h3>This is a text with a question</h3>
-            <button>Show Answer</button>
-            <nav>
-                <ul>
-                    <li>#html</li>
-                    <li>#flexbox</li>
-                    <li>#css</li>
-                </ul>
-            </nav>
-        </section>
     </main>
+    <footer>
+        <nav>
+            <a href="#"><img src="" alt=""></a>
+            <a href="#"><img src="" alt=""></a>
+            <a href="#"><img src="" alt=""></a>
+        </nav>
+    </footer>
 </body>
 </html>
