add show/hide answer functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <main>
         <section class="card">
             <h3>This is a text with a question</h3>
-            <button>Show Answer</button>
+            <div>
+                <input type="checkbox" id="switch">
+                <label for="switch"></label>
+                <h4 id="answer">This is a text with an answer</h4>
+            </div>
             <nav>
                 <ul>
                     <li>#html</li>
@@ -22,58 +26,8 @@
                     <li>#css</li>
                 </ul>
             </nav>
-        </section>
-        <section class="card">
-            <h3>This is a text with a question</h3>
-            <button>Show Answer</button>
-            <nav>
-                <ul>
-                    <li>#html</li>
-                    <li>#flexbox</li>
-                    <li>#css</li>
-                </ul>
-            </nav>
-        </section>
-        <section class="card">
-            <h3>This is a text with a question</h3>
-            <button>Show Answer</button>
-            <nav>
-                <ul>
-                    <li>#html</li>
-                    <li>#flexbox</li>
-                    <li>#css</li>
-                </ul>
-            </nav>
-        </section>
-        <section class="card">
-            <h3>This is a text with a question</h3>
-            <button>Show Answer</button>
-            <nav>
-                <ul>
-                    <li>#html</li>
-                    <li>#flexbox</li>
-                    <li>#css</li>
-                </ul>
-            </nav>
-        </section>
-        <section class="card">
-            <h3>This is a text with a question</h3>
-            <button>Show Answer</button>
-            <nav>
-                <ul>
-                    <li>#html</li>
-                    <li>#flexbox</li>
-                    <li>#css</li>
-                </ul>
-            </nav>
-        </section>
     </main>
     <footer>
-        <nav>
-            <a href="#"><img src="" alt=""></a>
-            <a href="#"><img src="" alt=""></a>
-            <a href="#"><img src="" alt=""></a>
-        </nav>
     </footer>
 </body>
 </html>
