--- a/index.html
+++ b/index.html
@@ -14,20 +14,35 @@
     <main>
         <section class="card">
             <h3>This is a text with a question</h3>
-            <div>
+            <div class="card-section">
                 <input type="checkbox" id="switch">
                 <label for="switch"></label>
                 <h4 id="answer">This is a text with an answer</h4>
             </div>
-            <nav>
-                <ul>
-                    <li>#html</li>
-                    <li>#flexbox</li>
-                    <li>#css</li>
-                </ul>
+            <nav class="card-section --tags">
+                <h5>#html</h5>
+                <h5>#flexbox</h5>
+                <h5>#css</h5>
             </nav>
+        </section>
+        <section class="card">
+            <h3>This is a text with a question</h3>
+            <div class="card-section">
+                <input type="checkbox" id="switch">
+                <label for="switch"></label>
+                <h4 id="answer">This is a text with an answer</h4>
+            </div>
+            <nav class="card-section --tags">
+                <h5>#html</h5>
+                <h5>#flexbox</h5>
+                <h5>#css</h5>
+            </nav>
+        </section>
     </main>
     <footer>
+        <img src="vector-elements\home.png" alt="home">
+        <img src="vector-elements\bookmark.png" alt="bookmark">
+        <img src="vector-elements\profile.png" alt="profile">
     </footer>
 </body>
 </html>
