last minute touches

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </section>
     </main>
     <footer>
-        <img src="vector-elements\home.png" alt="home">
+        <img src="https://th.bing.com/th/id/OIP.FYGKjqo_tTKlHaBViBFGdwHaF4?pid=ImgDet&rs=1" alt="home">
         <img src="vector-elements\bookmark.png" alt="bookmark">
-        <img src="vector-elements\profile.png" alt="profile">
+        <a href="profile.html"><img src="vector-elements\profile.png" alt="profile"></a>
     </footer>
 </body>
 </html>
