--- a/index.html
+++ b/index.html
@@ -5,44 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="sylesheet" href="styles-v2.css">
 </head>
 <body>
     <header class="title">
         <h1 >Quiz App</h1>
     </header>
     <main>
-        <section class="card">
-            <h3>This is a text with a question</h3>
-            <div class="card-section">
-                <input type="checkbox" id="switch">
-                <label for="switch"></label>
+        <article class="card">
+            <div>
+                <h3>This is a text with a question</h3>
+            </div>
+            <div class="card-section --answers">
+                <button type="button">Show Answer</button>
                 <h4 id="answer">This is a text with an answer</h4>
             </div>
-            <nav class="card-section --tags">
+            <div class="card-section --tags">
                 <h5>#html</h5>
                 <h5>#flexbox</h5>
                 <h5>#css</h5>
-            </nav>
-        </section>
-        <section class="card">
-            <h3>This is a text with a question</h3>
-            <div class="card-section">
-                <input type="checkbox" id="switch">
-                <label for="switch"></label>
-                <h4 id="answer">This is a text with an answer</h4>
             </div>
-            <nav class="card-section --tags">
-                <h5>#html</h5>
-                <h5>#flexbox</h5>
-                <h5>#css</h5>
-            </nav>
-        </section>
+        </article>
     </main>
     <footer>
-        <img src="https://th.bing.com/th/id/OIP.FYGKjqo_tTKlHaBViBFGdwHaF4?pid=ImgDet&rs=1" alt="home">
-        <img src="vector-elements\bookmark.png" alt="bookmark">
-        <a href="profile.html"><img src="vector-elements\profile.png" alt="profile"></a>
+        <a href="index.html">home</a>
+        <a href="bookmarks.html">bookmarks</a>
+        <a href="profile.html">home</a>
     </footer>
 </body>
 </html>
