--- a/profile.html
+++ b/profile.html
@@ -15,9 +15,9 @@
         <h1>This is a profile</h1>
     </main>
     <footer>
-        <a href="index.html"><img src="https://th.bing.com/th/id/OIP.FYGKjqo_tTKlHaBViBFGdwHaF4?pid=ImgDet&rs=1" alt="home"></a>
-        <img src="vector-elements\bookmark.png" alt="bookmark">
-        <img src="vector-elements\profile.png" alt="profile">
+        <a href="index.html">home</a>
+        <a href="bookmarks.html">bookmarks</a>
+        <a href="profile.html">home</a>
     </footer>
 </body>
 </html>
