--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="sylesheet" href="styles-v2.css">
+    <link rel="stylesheet" href="styles-v2.css">
 </head>
 <body>
     <header class="title">
@@ -28,9 +28,9 @@
         </article>
     </main>
     <footer>
-        <a href="index.html">home</a>
-        <a href="bookmarks.html">bookmarks</a>
-        <a href="profile.html">home</a>
+        <a href="index.html"><div class="icon"></div></a>
+        <a href="bookmarks.html"><div class="icon"></div></a>
+        <a href="profile.html"><div class="icon"></div></a>
     </footer>
 </body>
 </html>
