--- a/index.html
+++ b/index.html
@@ -8,17 +8,93 @@
     <link rel="stylesheet" href="styles-v2.css">
 </head>
 <body>
-    <header class="title">
+    <header class="title --body-element">
         <h1 >Quiz App</h1>
     </header>
-    <main>
+    <main class="--body-element">
         <article class="card">
-            <div>
-                <h3>This is a text with a question</h3>
+            <img class="--tab" src="vector-elements/bookmark-card.png" alt="">
+            <div class="card-section --question">
+                <h3 class="question">This is a text with a question</h3>
             </div>
-            <div class="card-section --answers">
+            <div class="card-section --answer">
                 <button type="button">Show Answer</button>
-                <h4 id="answer">This is a text with an answer</h4>
+                <h4 class="answer">This is a text with an answer</h4>
+            </div>
+            <div class="card-section --tags">
+                <h5>#html</h5>
+                <h5>#flexbox</h5>
+                <h5>#css</h5>
+            </div>
+        </article>
+        <article class="card">
+            <img class="--tab" src="vector-elements/bookmark-card-white.png" alt="">
+            <div class="card-section --question">
+                <h3 class="question">This is a text with a question</h3>
+            </div>
+            <div class="card-section --answer">
+                <button type="button">Show Answer</button>
+                <h4 class="answer">This is a text with an answer</h4>
+            </div>
+            <div class="card-section --tags">
+                <h5>#html</h5>
+                <h5>#flexbox</h5>
+                <h5>#css</h5>
+            </div>
+        </article>
+        <article class="card">
+            <img class="--tab" src="vector-elements/bookmark-card-white.png" alt="">
+            <div class="card-section --question">
+                <h3 class="question">This is a text with a question</h3>
+            </div>
+            <div class="card-section --answer">
+                <button type="button">Show Answer</button>
+                <h4 class="answer">This is a text with an answer</h4>
+            </div>
+            <div class="card-section --tags">
+                <h5>#html</h5>
+                <h5>#flexbox</h5>
+                <h5>#css</h5>
+            </div>
+        </article>
+        <article class="card">
+            <img class="--tab" src="vector-elements/bookmark-card-white.png" alt="">
+            <div class="card-section --question">
+                <h3 class="question">This is a text with a question</h3>
+            </div>
+            <div class="card-section --answer">
+                <button type="button">Show Answer</button>
+                <h4 class="answer">This is a text with an answer</h4>
+            </div>
+            <div class="card-section --tags">
+                <h5>#html</h5>
+                <h5>#flexbox</h5>
+                <h5>#css</h5>
+            </div>
+        </article>
+        <article class="card">
+            <img class="--tab" src="vector-elements/bookmark-card-white.png" alt="">
+            <div class="card-section --question">
+                <h3 class="question">This is a text with a question</h3>
+            </div>
+            <div class="card-section --answer">
+                <button type="button">Show Answer</button>
+                <h4 class="answer">This is a text with an answer</h4>
+            </div>
+            <div class="card-section --tags">
+                <h5>#html</h5>
+                <h5>#flexbox</h5>
+                <h5>#css</h5>
+            </div>
+        </article>
+        <article class="card">
+            <img class="--tab" src="vector-elements/bookmark-card-white.png" alt="">
+            <div class="card-section --question">
+                <h3 class="question">This is a text with a question</h3>
+            </div>
+            <div class="card-section --answer">
+                <button type="button">Show Answer</button>
+                <h4 class="answer">This is a text with an answer</h4>
             </div>
             <div class="card-section --tags">
                 <h5>#html</h5>
@@ -27,10 +103,10 @@
             </div>
         </article>
     </main>
-    <footer>
-        <a href="index.html"><div class="icon"></div></a>
-        <a href="bookmarks.html"><div class="icon"></div></a>
-        <a href="profile.html"><div class="icon"></div></a>
+    <footer class="--body-element">
+        <a href="index.html"><img src="vector-elements/home-icon-white.png"></img></a>
+        <a href="bookmarks.html"><img src="vector-elements/bookmark-icon-white.png" alt=""></div></a>
+        <a href="profile.html"><img src="vector-elements/profile-icon-white.png" alt=""></div></a>
     </footer>
 </body>
 </html>
