--- a/bookmarks.html
+++ b/bookmarks.html
@@ -5,19 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles-v2.css">
 </head>
 <body>
-    <header class="title">
+    <header class="title --body-element">
         <h1 >Quiz App</h1>
     </header>
-    <main>
-        <h1>This is a bookmark page</h1>
+    <main class="--body-element">
+        <article class="card">
+            <div class="active-tab"></div>
+            <div class="card-section --question">
+                <h3 class="question">This is a text with a question</h3>
+            </div>
+            <div class="card-section --answer">
+                <button type="button">Show Answer</button>
+                <h4 class="answer">This is a text with an answer</h4>
+            </div>
+            <div class="card-section --tags">
+                <h5>#html</h5>
+                <h5>#flexbox</h5>
+                <h5>#css</h5>
+            </div>
+        </article>
+        <article class="card">
+            <div class="active-tab"></div>
+            <div class="card-section --question">
+                <h3 class="question">This is a text with a question</h3>
+            </div>
+            <div class="card-section --answer">
+                <button type="button">Show Answer</button>
+                <h4 class="answer">This is a text with an answer</h4>
+            </div>
+            <div class="card-section --tags">
+                <h5>#html</h5>
+                <h5>#flexbox</h5>
+                <h5>#css</h5>
+            </div>
+        </article>
     </main>
-    <footer>
-        <a href="index.html">home</a>
-        <a href="bookmarks.html">bookmarks</a>
-        <a href="profile.html">profile</a>
+    <footer class="--body-element">
+        <a class="bottom-icon --home" href="index.html"><img alt="home" src="vector-elements/home-icon-white.png"></a>
+        <a class="bottom-icon --bookmarks-active" href="bookmarks.html"><img alt="bookmarks" src="vector-elements/bookmark-icon-orange.png"></a>
+        <a class="bottom-icon --profile" href="profile.html"><img alt="profile" src="vector-elements/profile-icon-white.png"></a>
     </footer>
 </body>
 </html>
