--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main class="--body-element">
         <article class="card">
-            <img class="--tab" src="vector-elements/bookmark-card-orange.png" alt="">
+            <div class="active-tab"></div>
             <div class="card-section --question">
                 <h3 class="question">This is a text with a question</h3>
             </div>
@@ -28,7 +28,7 @@
             </div>
         </article>
         <article class="card">
-            <img class="--tab" src="vector-elements/bookmark-card-orange.png" alt="">
+            <div class="active-tab"></div>
             <div class="card-section --question">
                 <h3 class="question">This is a text with a question</h3>
             </div>
@@ -43,7 +43,7 @@
             </div>
         </article>
         <article class="card">
-            <img class="--tab" src="vector-elements/bookmark-card-orange.png" alt="">
+            <div class="inactive-tab"></div>
             <div class="card-section --question">
                 <h3 class="question">This is a text with a question</h3>
             </div>
@@ -59,7 +59,7 @@
         </article>
     </main>
     <footer class="--body-element">
-        <a class="bottom-icon --home" href="index.html"><img alt="home" src="vector-elements/home-icon-orange.png"></a>
+        <a class="bottom-icon --home-active" href="index.html"><img alt="home" src="vector-elements/home-icon-orange.png"></a>
         <a class="bottom-icon --bookmarks" href="bookmarks.html"><img alt="bookmarks" src="vector-elements/bookmark-icon-white.png"></a>
         <a class="bottom-icon --profile" href="profile.html"><img alt="profile" src="vector-elements/profile-icon-white.png"></a>
     </footer>
