--- a/profile.html
+++ b/profile.html
@@ -5,19 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="" href="style.css">
+    <link rel="stylesheet" href="styles-v2.css">
 </head>
 <body>
-    <header class="title">
+    <header class="title --body-element">
         <h1 >Quiz App</h1>
     </header>
-    <main>
-        <h1>This is a profile</h1>
+    <main class="--body-element">
     </main>
-    <footer>
-        <a href="index.html">home</a>
-        <a href="bookmarks.html">bookmarks</a>
-        <a href="profile.html">home</a>
+    <footer class="--body-element">
+        <a class="bottom-icon --home" href="index.html"><img alt="home" src="vector-elements/home-icon-white.png"></a>
+        <a class="bottom-icon --bookmarks" href="bookmarks.html"><img alt="bookmarks" src="vector-elements/bookmark-icon-white.png"></a>
+        <a class="bottom-icon --profile-active" href="profile.html"><img alt="profile" src="vector-elements/profile-icon-orange.png"></a>
     </footer>
 </body>
 </html>
