--- a/index.html
+++ b/index.html
@@ -5,63 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles-v2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header class="title --body-element">
-        <h1 >Quiz App</h1>
+<body class="body">
+    <header class="body__title">
+        <h1>Quiz App</h1>
     </header>
-    <main class="--body-element">
+    <main class="body_main">
         <article class="card">
-            <div class="active-tab"></div>
-            <div class="card-section --question">
-                <h3 class="question">This is a text with a question</h3>
+            <div class="card__tab card__tab--active"></div>
+            <div class="card__question">
+                <h3>This is a text with a question</h3>
             </div>
-            <div class="card-section --answer">
+            <div class="card__answer">
                 <button type="button">Show Answer</button>
-                <h4 class="answer">This is a text with an answer</h4>
+                <h4>This is a text with an answer</h4>
             </div>
-            <div class="card-section --tags">
-                <h5>#html</h5>
-                <h5>#flexbox</h5>
-                <h5>#css</h5>
-            </div>
-        </article>
-        <article class="card">
-            <div class="active-tab"></div>
-            <div class="card-section --question">
-                <h3 class="question">This is a text with a question</h3>
-            </div>
-            <div class="card-section --answer">
-                <button type="button">Show Answer</button>
-                <h4 class="answer">This is a text with an answer</h4>
-            </div>
-            <div class="card-section --tags">
-                <h5>#html</h5>
-                <h5>#flexbox</h5>
-                <h5>#css</h5>
-            </div>
-        </article>
-        <article class="card">
-            <div class="inactive-tab"></div>
-            <div class="card-section --question">
-                <h3 class="question">This is a text with a question</h3>
-            </div>
-            <div class="card-section --answer">
-                <button type="button">Show Answer</button>
-                <h4 class="answer">This is a text with an answer</h4>
-            </div>
-            <div class="card-section --tags">
+            <div class="card__tags">
                 <h5>#html</h5>
                 <h5>#flexbox</h5>
                 <h5>#css</h5>
             </div>
         </article>
     </main>
-    <footer class="--body-element">
-        <a class="bottom-icon --home-active" href="index.html"><img alt="home" src="vector-elements/home-icon-orange.png"></a>
-        <a class="bottom-icon --bookmarks" href="bookmarks.html"><img alt="bookmarks" src="vector-elements/bookmark-icon-white.png"></a>
-        <a class="bottom-icon --profile" href="profile.html"><img alt="profile" src="vector-elements/profile-icon-white.png"></a>
+    <footer class="body__footer">
+        <a class="icon icon--active" href="index.html">
+            <img alt="home" src="vector-elements/home-icon-orange.png">
+        </a>
+        <a class="icon" href="bookmarks.html">
+            <img alt="bookmarks" src="vector-elements/bookmark-icon-white.png">
+        </a>
+        <a class="icon" href="profile.html">
+            <img alt="profile" src="vector-elements/profile-icon-white.png">
+        </a>
     </footer>
 </body>
 </html>
